--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -237,8 +237,9 @@
   &__btnCheckout {
     background-color: #533723;
     color: white;
-    font-size: 1.7rem;
-    padding: 1rem 3rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: 1.1rem 3.2rem;
     max-width: 30rem;
     margin: 0 auto;
     @include desktop {
