--- a/src/components/SignInForm/SignInForm.scss
+++ b/src/components/SignInForm/SignInForm.scss
@@ -1,29 +1,61 @@
 .sign-in-form-container {
   max-width: 45rem;
-  margin: 20.1rem 0;
+  margin: 10rem 0;
   margin-right: auto;
   margin-left: auto;
   background-color: #ebdccb;
-  padding: 3rem 3rem 9rem 3rem;
+  padding: 5rem 3rem 9rem 3rem;
   h1 {
     font-size: 3rem;
     text-align: center;
     font-weight: bold;
     margin-bottom: 5rem;
   }
+  &__line {
+    padding: 2rem 0;
+    display: flex;
+    align-items: center;
+    .left-line {
+      margin-right: 0.5rem;
+      width: 18.5rem;
+      height: 0.1rem;
+      background-color: rgba($color: #000000, $alpha: 1);
+      opacity: 0.5;
+    }
+    .or-text {
+      font-size: 1.5rem;
+    }
+    .right-line {
+      opacity: 0.5;
+      margin-left: 0.5rem;
+      width: 18.5rem;
+      height: 0.1rem;
+      background-color: rgba($color: #000000, $alpha: 1);
+    }
+  }
   &__logo-social-media {
     display: flex;
-    flex-direction: column;
-    gap: 2rem 0rem;
+    justify-content: space-around;
     align-items: center;
     .facebook-logo,
     .google-logo {
-      width: 20rem;
+      width: 16rem;
+      height: 5rem;
       object-fit: cover;
       &:hover {
         cursor: pointer;
         opacity: 0.8;
       }
+    }
+  }
+  &__isHasAccount {
+    margin-top: 4rem;
+    font-size: 1.6rem;
+    display: flex;
+    justify-content: center;
+    .link {
+      margin-left: 1rem;
+      text-decoration: none;
     }
   }
 }
