--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,6 +10,11 @@
   justify-content: space-around;
   height: 6rem;
   box-shadow: 0px 2px 0px 2px rgba($color: #000000, $alpha: 0.1);
+  &__searchBox {
+    position: absolute;
+    bottom: -8rem;
+    right: 20rem;
+  }
   &__iconShowAndHideNavbar {
     align-self: center;
     display: none;
@@ -157,7 +162,7 @@
       font-size: 2rem;
       padding: 1rem 3rem;
       font-weight: bold;
-      background-color: white;
+      background-color: #ebdccb;
       transition: all 0.2s linear;
       box-shadow: 0 -4px 32px rgb(0 0 0 / 20%);
 
