--- a/src/components/ListProduct/ListProduct.scss
+++ b/src/components/ListProduct/ListProduct.scss
@@ -2,7 +2,9 @@
 .list-product-container {
   display: flex;
   flex-wrap: wrap;
+  position: relative;
   gap: 2rem 10rem;
+  min-height: 55rem;
   @include desktop {
     gap: 1rem 5rem;
   }
