--- a/src/pages/DetaiProductPage/DetailProductPage.scss
+++ b/src/pages/DetaiProductPage/DetailProductPage.scss
@@ -47,8 +47,8 @@
       margin-top: 6rem;
 
       h1 {
-        font-size: 5rem;
-        font-style: italic;
+        font-size: 4rem;
+       font-weight: normal;
         color: #533723;
         @include desktop {
           font-size: 3rem;
