--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -45,9 +45,12 @@
     button {
       padding: 1rem 4rem;
       font-size: 2.3rem;
-      background-color: white;
-      border: 1px solid black;
+      background-color: transparent;
+      border: 1.5px solid #533723;
       border-radius: 5rem;
+      color: #533723;
+      font-weight: bold;
+      transition: all 0.6s;
       @include desktop {
         padding: 0.8rem 3.2rem;
         font-size: 2.1rem;
@@ -65,7 +68,8 @@
         font-size: 1.6rem;
       }
       &:hover {
-        background-color: blanchedalmond;
+        background-color: #533723;
+        color: white;
       }
     }
   }
