--- a/src/components/BoxInfoCart/BoxInfoCart.scss
+++ b/src/components/BoxInfoCart/BoxInfoCart.scss
@@ -1,3 +1,27 @@
+@import '../../assets/styles/responsive';
+
+.cart-info-header{
+  @include desktop {
+    font-size: 2.3rem;
+  }
+}
+.cart-info-content{
+  font-size: 1.6rem;
+  @include desktop {
+    font-size: 1.4rem;
+  }
+}
+.btn-order{
+    font-size: 1.6rem !important;
+    @include desktop {
+      font-size: 1.4rem !important;
+    }
+    &:hover{
+      cursor: pointer;
+      opacity: 0.9;
+    }
+}
+
 .btn-change {
   &:hover {
     cursor: pointer;
