--- a/src/components/DetailProduct/DetailProduct.scss
+++ b/src/components/DetailProduct/DetailProduct.scss
@@ -187,9 +187,10 @@
       .btn-size {
         margin-right: 2rem;
         background-color: transparent;
-        border: 1px solid black;
+        border: 1px solid #533723;
         font-size: 1.7rem;
         padding: 0.5rem 1rem;
+        color :#533723;
         @include desktop {
           font-size: 1.3rem;
         }
@@ -205,7 +206,7 @@
         }
       }
       button.active {
-        border: 3px solid rgba($color: #000000, $alpha: 0.7);
+        border: 3px solid rgba($color: #533723, $alpha: 0.8);
       }
     }
     &__quantityAndAddToCart {
