--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
+    gap: 0.2rem;
     &__heading {
       font-weight: bold;
       font-size: 1.7rem;
@@ -42,7 +43,7 @@
     }
     .link {
       text-decoration: none;
-      color: black;
+      color: #533723;
       font-size: 1.5rem;
       @include desktop {
         font-size: 1.35rem;
@@ -58,6 +59,8 @@
   &--gender {
     display: flex;
     flex-direction: column;
+    margin-bottom: 2rem;
+    gap: 0.2rem;
     &__heading {
       font-weight: bold;
       font-size: 1.7rem;
@@ -71,7 +74,37 @@
     }
     .link {
       text-decoration: none;
-      color: black;
+      color: #533723;
+      font-size: 1.5rem;
+      @include desktop {
+        font-size: 1.35rem;
+      }
+      @include tablet {
+        font-size: 1.1rem;
+      }
+      &:hover {
+        font-weight: bold;
+      }
+    }
+  }
+  &--price {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    &__heading {
+      font-weight: bold;
+      font-size: 1.7rem;
+      margin-bottom: 1rem;
+      @include desktop {
+        font-size: 1.5rem;
+      }
+      @include tablet {
+        font-size: 1.3rem;
+      }
+    }
+    .link {
+      text-decoration: none;
+      color: #533723;
       font-size: 1.5rem;
       @include desktop {
         font-size: 1.35rem;
