--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -98,8 +98,9 @@
     }
     .link {
       text-decoration: none;
-      color: black;
-      padding: 2rem 4rem;
+      color: #533723;
+      padding: 1.5rem 4rem;
+      transition: all 0.6s;
       @include tablet {
         padding: 2rem;
       }
@@ -118,6 +119,8 @@
       &:hover {
         opacity: 0.5;
         background-color: blanchedalmond;
+        transform: translateY(-1rem);
+        padding: 2.5rem 4rem;
       }
     }
   }
@@ -153,32 +156,35 @@
         }
       }
     }
-    .logout {
-      position: fixed;
-      color: #2c2c2c;
-      z-index: 10;
-      top: 6.2rem;
-      right: 16rem;
-      font-size: 2rem;
-      padding: 1rem 3rem;
-      font-weight: bold;
-      background-color: #ebdccb;
-      transition: all 0.2s linear;
-      box-shadow: 0 -4px 32px rgb(0 0 0 / 20%);
-
-      &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-      }
-    }
+    
     &-image {
       width: 2.7rem;
       height: 2.7rem;
       border-radius: 50%;
+      position: relative;
       img {
         width: 100%;
         height: 100%;
         border-radius: 50%;
+        &:hover {
+          cursor: pointer;
+          opacity: 0.8;
+        }
+      }
+      .logout {
+        position: absolute;
+        color: #533723;
+        z-index: 10;
+        top: 4.2rem;
+        right: 0;
+        font-size: 1.7rem;
+        padding: 1rem 2rem;
+       min-width: 11rem;
+        font-weight: bold;
+        background-color: #ebdccb;
+        transition: all 0.2s linear;
+        box-shadow: 0 2px 2px rgba($color: #000000, $alpha: 0.2);
+  
         &:hover {
           cursor: pointer;
           opacity: 0.8;
