--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap');
 body {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9f9f9;
+  color: #533723;
 }
 html {
   font-size: 62.5%;
@@ -14,7 +15,4 @@ html {
   border: 0;
   box-sizing: border-box;
 }
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+
